<resources>
    <string name="app_name">Watchlist</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="shortName">Short Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="positve">Positive</string>
    <string name="clearAll">Clear All</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="dayHigh">Day High</string>
    <string name="dayLow">Day Low</string>
    <string name="scripCode">Scrip Code</string>
    <string name="nseBseCode">Nse Bse Code</string>
    <string name="filterTitle">Select Sorting Parameter</string>
    <string name="lastTradePrice">Last Trade Price</string>
    <string name="pclose">PClose</string>
    <string name="volume">Volume</string>
    <string name="enter_email">Please enter email!</string>
    <string name="enter_valid_email">Please enter a valid email!</string>
    <string name="enter_password">Please enter password</string>
    <string name="watchlist">Watchlist</string>
</resources>